--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="https://lucasesgomes.github.io/MultiplasAPI/api-dolar.html"><button class="btn">Conferir Dólar</button></a>
                 <a href="https://lucasesgomes.github.io/MultiplasAPI/api-clima.html"><button class="btn">Visualizar Clima</button></a>
                 <a href="https://lucasesgomes.github.io/E-commerce/"><button class="btn">E-commerce</button></a>
-                <a href="https://lucasesgomes.github.io/API-Tema/"><button class="btn">Consultar CPF</button></a>
+                <a href="https://lucasesgomes.github.io/API-Tema/"><button class="btn">API Tema</button></a>
                 <a href="https://lucasesgomes.github.io/Busca-CPF/"><button class="btn">Busca CPF</button></a>
         </div>
 </body>
